kubernetes/shared/infrastructure/core/flux-system/flux-operator/app/networkpolicy-metrics.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flux-operator-metrics
  namespace: flux-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: flux-operator
      app.kubernetes.io/name: flux-operator
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      ports:
        - port: 8080
          protocol: TCP
